Feature - add services and cleanup ui (#28)
