# tenant-ui/app/routes/tenants/model.ts
@@ -1,0 +1,4 @@
+export interface Tenant {
+  id: string;
+  displayName: string;
+}
